<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">Smart Bill</string>
    <string name="about">About</string>
    <string name="bill">Bill</string>
    <string name="billAmount">Amount of the bill</string>
    <string name="payment">Payment</string>
    <string name="calculate">Calculate</string>
    <string name="moneySymbol">£</string>
    <string name="totalStart">Total (x </string>
    <string name="percentSymbol">%</string>
    <string name="tip">Tipping</string>
    <string name="details">Details</string>
    <string name="toPay">To pay for 1 person</string>
    <string name="totalEnd">" persons)"</string>
    <string name="persons">persons</string>
    <string name="tipMaxValue">50</string>
    <string name="noTip">No tip</string>
    <string name="aboutMsg">Application Smart Bill\nby Denis Le</string>
    <string name="zero">0</string>
    <string name="round">Round the result</string>
    <string name="up">Up</string>
    <string name="down">Down</string>

</resources>
